--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
 
 rootProject.projectDir = new File(settingsDir, '.')
-rootProject.name = "OculusRoot"
+rootProject.name = "RevolVR"
 
 include ':', \
 	':FTS:Projects:Android'
