--- a/VrApp.gradle
+++ b/VrApp.gradle
@@ -116,7 +116,7 @@ class VrAppPlugin implements Plugin<Project> {
 
       externalNativeBuild {
         ndkBuild {
-          path 'jni/Android.mk'
+          path 'Android.mk'
         }
       }
 
