--- a/FTS/build.gradle
+++ b/FTS/build.gradle
@@ -30,9 +30,9 @@ android {
         ndk {
                 abiFilters 'arm64-v8a'
         }
-        ndkBuild {
-                abiFilters 'arm64-v8a'
-        }
+      cmake {
+        cppFlags '-std=c++17'
+      }
     }
   }
 
@@ -44,6 +44,12 @@ android {
       assets.srcDirs = ['assets']
     }
 
+  }
+
+  externalNativeBuild {
+    cmake {
+      path "CMakeLists.txt"
+    }
   }
 
   lintOptions {
