--- a/VrApp.gradle
+++ b/VrApp.gradle
@@ -1,4 +1,4 @@
-import org.gradle.internal.os.OperatingSystem;
+import org.gradle.internal.os.OperatingSystem
 import com.android.ddmlib.AndroidDebugBridge
 import com.android.ddmlib.IDevice
 import com.android.ddmlib.CollectingOutputReceiver
@@ -7,11 +7,11 @@ import org.apache.tools.ant.taskdefs.condition.Os
 buildscript {
   repositories {
     google()
-    jcenter()
+    mavenCentral()
   }
 
   dependencies {
-    classpath 'com.android.tools.build:gradle:4.0.0'
+    classpath 'com.android.tools.build:gradle:4.0.2'
   }
 
   tasks.register("wrapper")
@@ -23,17 +23,17 @@ class VrAppPlugin implements Plugin<Project> {
   // per-device methods //
 
   boolean isPackageInstalled( IDevice device, String packageName ) {
-    CollectingOutputReceiver receiver = new CollectingOutputReceiver();
-    device.executeShellCommand( "pm list packages " + packageName, receiver );
-    def out = receiver.getOutput();
-    def ret = false;
+    CollectingOutputReceiver receiver = new CollectingOutputReceiver()
+    device.executeShellCommand( "pm list packages " + packageName, receiver )
+    def out = receiver.getOutput()
+    def ret = false
     out.split('\n').each {
       if ( it =~ packageName )
       {
-        ret = true;
+        ret = true
       }
     }
-    return ret;
+    return ret
   }
 
   void clearAdbLog( IDevice device ) {
@@ -104,21 +104,21 @@ class VrAppPlugin implements Plugin<Project> {
         minSdkVersion 24
         targetSdkVersion 25
 
-        externalNativeBuild {
-          ndk {
-          }
-          ndkBuild {
-            def numProcs = Runtime.runtime.availableProcessors()
-            arguments "V=0", "-j$numProcs", "-C$project.buildDir.parent", "APP_PLATFORM=android-24", "NDK_TOOLCHAIN_VERSION=clang", "APP_STL=c++_static"
-          }
-        }
+//        externalNativeBuild {
+//          ndk {
+//          }
+//          ndkBuild {
+//            def numProcs = Runtime.runtime.availableProcessors()
+//            arguments "V=0", "-j$numProcs", "-C$project.buildDir.parent", "APP_PLATFORM=android-24", "NDK_TOOLCHAIN_VERSION=clang", "APP_STL=c++_static"
+//          }
+//        }
       }
 
-      externalNativeBuild {
-        ndkBuild {
-          path 'Android.mk'
-        }
-      }
+//      externalNativeBuild {
+//        ndkBuild {
+//          path 'Android.mk'
+//        }
+//      }
 
       signingConfigs {
         def keystorePath = (project.hasProperty('key.store')) ?
@@ -157,11 +157,11 @@ class VrAppPlugin implements Plugin<Project> {
           debuggable true
           jniDebuggable true
 
-          externalNativeBuild {
-            ndkBuild {
-              arguments "NDK_DEBUG=1","OVR_DEBUG=1","USE_ASAN=1"
-            }
-          }
+//          externalNativeBuild {
+//            ndkBuild {
+//              arguments "NDK_DEBUG=1","OVR_DEBUG=1","USE_ASAN=1"
+//            }
+//          }
         }
 
         release {
@@ -169,11 +169,11 @@ class VrAppPlugin implements Plugin<Project> {
           debuggable false
           jniDebuggable false
 
-          externalNativeBuild {
-            ndkBuild {
-              arguments "NDK_DEBUG=0","OVR_DEBUG=0","USE_ASAN=0"
-            }
-          }
+//          externalNativeBuild {
+//            ndkBuild {
+//              arguments "NDK_DEBUG=0","OVR_DEBUG=0","USE_ASAN=0"
+//            }
+//          }
         }
       }
     }
@@ -193,7 +193,7 @@ class VrAppPlugin implements Plugin<Project> {
     project.afterEvaluate {
       Task initDeviceList = project.task( "initDeviceList()" ).doLast {
         project.ext.deviceMap = [ : ]
-        if (project.hasProperty( "should_install" ) == true) {
+        if (project.hasProperty("should_install")) {
           AndroidDebugBridge.initIfNeeded( false )
           AndroidDebugBridge bridge = AndroidDebugBridge.createBridge( project.android.getAdbExe().absolutePath, false )
 
@@ -208,7 +208,7 @@ class VrAppPlugin implements Plugin<Project> {
           }
 
           // if a device is connected both physically and over the network, only include the physical ID
-          if ( project.hasProperty( "should_install" ) == true ) {
+          if (project.hasProperty("should_install")) {
             bridge.devices.split { it.getProperty( "ro.serialno" ) != it.serialNumber }.each {
               it.collectEntries( project.deviceMap, { [ ( it.getProperty( "ro.serialno" )) : it ] } )
             }
@@ -294,4 +294,4 @@ project.tasks.whenTaskAdded { task ->
   }
 }
 
-//apply plugin: VrAppPlugin
+apply plugin: VrAppPlugin
