--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,6 @@ allprojects {
   }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
+//task clean(type: Delete) {
+//    delete rootProject.buildDir
+//}
