Updated cmake, updated gradle, reorganized cmake structure, and deleted more unnecessary crap

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 # For more information about using CMake with Android Studio, read the
 # documentation: https://d.android.com/studio/projects/add-native-code.html
 
-cmake_minimum_required(VERSION 3.10.2)
+cmake_minimum_required(VERSION 3.22.1)
 project("fts" CXX ASM)
 set(CMAKE_CXX_STANDARD 17)
 
@@ -12,26 +12,6 @@ add_definitions(
   -DXR_USE_GRAPHICS_API_VULKAN
 )
 
-# Add openxr_loader as a library target
-add_library(openxr_loader SHARED IMPORTED)
-
-# Set the location of the openxr_loader library
-set_target_properties(
-  openxr_loader
-  PROPERTIES IMPORTED_LOCATION
-  ${CMAKE_CURRENT_SOURCE_DIR}/libs/meta/OpenXR/Libs/Android/${ANDROID_ABI}/${CMAKE_BUILD_TYPE}/libopenxr_loader.so
-)
-
-# Add meta audio sdk for spatial audio
-add_library(ovraudio SHARED IMPORTED)
-
-# Set the location of the ovraudio library
-set_target_properties(
-        ovraudio
-        PROPERTIES IMPORTED_LOCATION
-        ${CMAKE_CURRENT_SOURCE_DIR}/libs/meta/AudioSDK/Libs/Android/${ANDROID_ABI}/libovraudio64.so
-)
-
 # Find android libraries
 find_library(android-log log REQUIRED)
 find_library(android android REQUIRED)
@@ -39,5 +19,7 @@ find_library(vulkan vulkan REQUIRED)
 find_library(aaudio aaudio REQUIRED)
 
 # Add the FTS subdirectory
-add_subdirectory("FTS")
-add_subdirectory("libs/glm")
+add_subdirectory(FTS)
+
+# Add 3rd party libs
+add_subdirectory(libs)
