--- a/FTS/AndroidManifest.xml
+++ b/FTS/AndroidManifest.xml
@@ -21,7 +21,7 @@
 		<!-- If targeting API level 24+, configChanges should additionally includes 'density'. -->
 		<!-- If targeting API level 24+, android:resizeableActivity="false" should be added. -->
 		<activity
-				android:name="com.imminenteminence.fts.MainActivity"
+				android:name="android.app.NativeActivity"
 				android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
 				android:launchMode="singleTask"
 				android:screenOrientation="landscape"
