Renamed FTS to app

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,8 +18,39 @@ find_library(android android REQUIRED)
 find_library(vulkan vulkan REQUIRED)
 find_library(aaudio aaudio REQUIRED)
 
-# Add the FTS subdirectory
-add_subdirectory(FTS)
-
 # Add 3rd party libs
 add_subdirectory(libs)
+
+# Creating variables containing source locations
+file(
+  GLOB_RECURSE
+  LOCAL_SOURCE
+  CONFIGURE_DEPENDS
+  "engine/*.cpp"
+  "FTS/src/main/cpp/*.cpp"
+)
+
+file(
+  GLOB_RECURSE
+  LOCAL_ASSEMBLY
+  CONFIGURE_DEPENDS
+  "engine/*.s"
+)
+
+# Creates and names a library, sets it as either STATIC
+# or SHARED, and provides the relative paths to its source code.
+# You can define multiple libraries, and CMake builds them for you.
+# Gradle automatically packages shared libraries with your APK.
+add_library(fts SHARED ${LOCAL_ASSEMBLY} ${LOCAL_SOURCE})
+
+# Adding the include directory to fts.
+target_include_directories(
+  fts
+  PUBLIC
+  ${CMAKE_CURRENT_SOURCE_DIR}/engine/include
+  ${CMAKE_CURRENT_SOURCE_DIR}/FTS/src/main/cpp/fts-game/include
+  ${ANDROID_NDK}/sources/android/native_app_glue/
+)
+
+# Adding libraries to link to fts.
+target_link_libraries(fts openxr_loader ovraudio glm ${android-log} ${android} ${vulkan} ${aaudio})
