--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
   // -debug.apk or -release.apk appended to it.
   // The filename doesn't effect the Android installation process.
   // Use only letters to remain compatible with the package name.
-  project.archivesBaseName = "fts"
+  project.archivesBaseName = "app"
 
   dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
@@ -20,7 +20,7 @@ android {
     // Gradle replaces the manifest package with this value, which must
     // be unique on a system.  If you don't change it, a new app
     // will replace an older one.
-    applicationId "com.imminenteminence." + project.archivesBaseName
+    applicationId "com.wamwadstudios." + project.archivesBaseName
     minSdkVersion 27
     targetSdkVersion 27
 
@@ -38,7 +38,6 @@ android {
   sourceSets {
     main {
       manifest.srcFile 'AndroidManifest.xml'
-      java.srcDirs = ['src/main/java']
       assets.srcDirs = ['assets']
     }
   }
