Hand tracking and orbiting lights are separated and working through gradle, just need other examples now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ file(
   LOCAL_SOURCE
   CONFIGURE_DEPENDS
   "src/*.cpp"
-  "examples/app/src/main/cpp/*.cpp"
+  "examples/${EXAMPLE_NAME}/src/main/cpp/*.cpp"
 )
 
 file(
@@ -48,7 +48,7 @@ target_include_directories(
   game
   PUBLIC
   ${CMAKE_CURRENT_SOURCE_DIR}/include
-  ${CMAKE_CURRENT_SOURCE_DIR}/examples/app/include
+  ${CMAKE_CURRENT_SOURCE_DIR}/examples/${EXAMPLE_NAME}/include
   ${ANDROID_NDK}/sources/android/native_app_glue/
 )
 
