--- a/examples/settings.gradle
+++ b/examples/settings.gradle
@@ -14,6 +14,7 @@ include ':', \
  ':sample-projects:generic', \
  ':sample-projects:movement', \
  ':sample-projects:pointcloud', \
+ ':sample-projects:arena', \
  ':sample-projects:timer'
 
 
